--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 			<div class="col-sm-4"><img class="image" src="https://images.unsplash.com/photo-1592492152545-9695d3f473f4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHNwbGFzaHxlbnwwfHwwfHx8MA%3D%3D"></div>
 		</div>
 		<div style="display: flex;">
-			<div class="col-sm-12"><img class="image" src="https://images.unsplash.com/photo-1533167649158-6d508895b680?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHNwbGFzaHxlbnwwfHwwfHx8MA%3D%3D"></div>
+			<div class="col-sm-12"><img class="image" src="https://goswift.in/img/logo.png"></div>
 		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
