--- a/main.html
+++ b/main.html
@@ -11,30 +11,30 @@
 	<div class="container-fluid">
 		<div style="display:flex;">
 		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		<div class="col-sm-1"><img class="image" src="https://plus.unsplash.com/premium_photo-1670148434900-5f0af77ba500?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c3BsYXNofGVufDB8fDB8fHww"></div>
+		<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-1"><img class="image" src="https://goswift.in/img/logo.png"></div>
 	    </div>
 		<div style="display: flex;">
-			<div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>
-		    <div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>
-			<div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>
-            <div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>		
-			<div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>
-			<div class="col-sm-2"><img class="image" src="https://images.unsplash.com/photo-1594897030264-ab7d87efc473?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3BsYXNofGVufDB8fDB8fHww"></div>
+			<div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>
+		    <div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>
+            <div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>		
+			<div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>
+			<div class="col-sm-2"><img class="image" src="https://goswift.in/img/logo.png"></div>
 		</div>
 		<div style="display: flex;">
-			<div class="col-sm-4"><img class="image" src="https://images.unsplash.com/photo-1592492152545-9695d3f473f4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHNwbGFzaHxlbnwwfHwwfHx8MA%3D%3D"></div>
-            <div class="col-sm-4"><img class="image" src="https://images.unsplash.com/photo-1592492152545-9695d3f473f4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHNwbGFzaHxlbnwwfHwwfHx8MA%3D%3D"></div>		
-			<div class="col-sm-4"><img class="image" src="https://images.unsplash.com/photo-1592492152545-9695d3f473f4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHNwbGFzaHxlbnwwfHwwfHx8MA%3D%3D"></div>
+			<div class="col-sm-4"><img class="image" src="https://goswift.in/img/logo.png"></div>
+            <div class="col-sm-4"><img class="image" src="https://goswift.in/img/logo.png"></div>		
+			<div class="col-sm-4"><img class="image" src="https://goswift.in/img/logo.png"></div>
 		</div>
 		<div style="display: flex;">
 			<div class="col-sm-12"><img class="image" src="https://goswift.in/img/logo.png"></div>
